Корректировки. Добавление перевода для InitWindow (без en)

--- a/resources/locales/!pot/InitTools.pot
+++ b/resources/locales/!pot/InitTools.pot
@@ -1,5 +1,7 @@
 # .pot by NoName24 (gNoName24)
 # InitTools (Core) module
+# Created on 2025-08-23
+# Last Updated on 2025-08-23
 
 msgid ""
 msgstr ""
